--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
         <version>20140107</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.25</version>
+    </dependency>
 
 
     <dependency>
