telegram bot heroku upload

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
     </dependency>
 
 
-
+        <dependency>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>3.0.3</version>
+        </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
