--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org</groupId>
-    <artifactId>tgbot</artifactId>
+    <groupId>src.tgbot</groupId>
+    <artifactId>src.tgbot</artifactId>
     <version>1.0</version>
 
     <properties>
@@ -96,7 +96,7 @@
                     <programs>
                         <program>
 
-                            <mainClass>Main</mainClass>
+                            <mainClass>tgbot.Main</mainClass>
                             <name>-TelegramBotSlava</name>
                         </program>
                     </programs>
