--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
         <version>8.0.25</version>
     </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>2.1.0</version>
+            <type>maven-plugin</type>
+        </dependency>
 
     <dependency>
         <groupId>org.telegram</groupId>
@@ -103,10 +109,7 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
+                        <phase>package</phase><goals><goal>assemble</goal></goals>
                     </execution>
                 </executions>
             </plugin>
