--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+    </properties    >
 
     <build>
         <plugins>
@@ -24,7 +24,7 @@
                     <programs>
                         <program>
 
-                            <mainClass>tgbot.Main</mainClass>
+                            <mainClass>Main</mainClass>
                             <name>workerBot</name>
                         </program>
                     </programs>
