--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
         <version>4.4</version>
     </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20.jre7</version>
+        </dependency>
 
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
