--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>2.1.0</version>
@@ -57,6 +66,7 @@
         <artifactId>httpcore</artifactId>
         <version>4.4</version>
     </dependency>
+
 
         <dependency>
             <groupId>org.postgresql</groupId>
