--- a/pom.xml
+++ b/pom.xml
@@ -119,16 +119,26 @@
             <artifactId>icu4j</artifactId>
             <version>4.8.1.1</version>
         </dependency>
-        <dependency>
+       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.13</version>
     </dependency>
-    <dependency>
+     <dependency>
         <groupId>com.vaadin.external.google</groupId>
         <artifactId>android-json</artifactId>
         <version>0.0.20131108.vaadin1</version>
     </dependency>
+      <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
 </dependencies>
 
